<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/sub_background_color"
    android:paddingHorizontal="20dp">
    <ImageView
        android:id="@+id/prescription_back_btn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintTop_toTopOf="@+id/prescription_title"
        app:layout_constraintBottom_toBottomOf="@+id/prescription_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="5dp"
        android:scaleType="fitStart"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back" />
    <TextView
        android:id="@+id/prescription_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/prescription_fragment_title"
        style="@style/MainTitleText"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/prescription_complete_btn"
        app:layout_constraintTop_toBottomOf="@+id/prescription_title">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--    doctor name-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/doctor_root"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:paddingHorizontal="15dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_prescription_name"
                app:layout_constraintEnd_toStartOf="@+id/patient_bg"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/prescription_doctor_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_img_doctor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/prescription_doctor_title"
                    style="@style/PrescriptionPersonTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/prescription_doctor_title"
                    app:layout_constraintBottom_toTopOf="@+id/prescription_doctor_name"
                    app:layout_constraintLeft_toRightOf="@+id/prescription_doctor_img"
                    app:layout_constraintTop_toTopOf="@+id/prescription_doctor_img" />

                <TextView
                    android:id="@+id/prescription_doctor_name"
                    style="@style/PrescriptionPersonNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prescription_doctor_name"
                    app:layout_constraintBottom_toBottomOf="@+id/prescription_doctor_img"
                    app:layout_constraintLeft_toLeftOf="@+id/prescription_doctor_title"
                    app:layout_constraintTop_toBottomOf="@+id/prescription_doctor_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--    patient name-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/patient_bg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:paddingHorizontal="15dp"
                android:background="@drawable/bg_prescription_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/doctor_root"
                app:layout_constraintTop_toTopOf="@+id/doctor_root">

                <ImageView
                    android:id="@+id/prescription_patient_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_img_patient"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/prescription_patient_title"
                    style="@style/PrescriptionPersonTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/prescription_patient_title"
                    app:layout_constraintBottom_toTopOf="@+id/prescription_patient_name"
                    app:layout_constraintLeft_toRightOf="@+id/prescription_patient_img"
                    app:layout_constraintTop_toTopOf="@+id/prescription_patient_img" />

                <TextView
                    android:id="@+id/prescription_patient_name"
                    style="@style/PrescriptionPersonNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="로제"
                    app:layout_constraintBottom_toBottomOf="@+id/prescription_patient_img"
                    app:layout_constraintLeft_toLeftOf="@+id/prescription_patient_title"
                    app:layout_constraintTop_toBottomOf="@+id/prescription_patient_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--    symptom-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/symptom_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/doctor_root">
                <TextView
                    android:id="@+id/symptom_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrescriptionTitleText"
                    android:text="@string/prescription_symptom_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/symptomImg1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/img_logo"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_marginRight="12dp"
                    app:layout_constraintEnd_toStartOf="@+id/symptomImg2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/symptom_title" />
                <TextView
                    android:id="@+id/symptomTv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrescriptionSymptomDescText"
                    android:text="1. 잎 끝의 갈변"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/symptomImg1"
                    app:layout_constraintLeft_toLeftOf="@+id/symptomImg1"
                    app:layout_constraintRight_toRightOf="@+id/symptomImg1"/>
                <ImageView
                    android:id="@+id/symptomImg2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_logo"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="@+id/symptomImg1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/symptomImg1" />
                <TextView
                    android:id="@+id/symptomTv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrescriptionSymptomDescText"
                    android:text="2. 시든 잎과 줄기"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/symptomImg2"
                    app:layout_constraintLeft_toLeftOf="@+id/symptomImg2"
                    app:layout_constraintRight_toRightOf="@+id/symptomImg2"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--    prescription-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cause_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/symptom_root">
                <TextView
                    android:id="@+id/cause_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrescriptionTitleText"
                    android:text="@string/prescription_cause_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/causeTv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    style="@style/PrescriptionSymptomDescText"
                    android:background="@drawable/bg_cause_txt"
                    android:text="1. 잎 끝의 갈변"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/cause_title"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/causeTv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    style="@style/PrescriptionSymptomDescText"
                    android:background="@drawable/bg_cause_txt"
                    android:text="2. 시든 잎과 줄기"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/causeTv1"
                    app:layout_constraintLeft_toLeftOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--    solution -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/solution_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/cause_root">
                <TextView
                    android:id="@+id/solution_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PrescriptionTitleText"
                    android:text="@string/prescription_solution_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/solutionTv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    style="@style/PrescriptionSymptomDescText"
                    android:background="@drawable/bg_solution_txt"
                    android:text="1. 잎 끝의 갈변"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/solution_title"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/solutionTv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    style="@style/PrescriptionSymptomDescText"
                    android:background="@drawable/bg_solution_txt"
                    android:text="2. 시든 잎과 줄기"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/solutionTv1"
                    app:layout_constraintLeft_toLeftOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/prescription_complete_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_green_selector"
        style="@style/LoginButtonText"
        android:text="@string/complete_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>